--- a/index.html
+++ b/index.html
@@ -55,19 +55,20 @@
             <h3> Подсказки и пожелания</h3>
             <hr>
             <div class="minimum">
-                <p class="desc "> Вот уже совсем близко этот волшебный день,<br> Праздник Настоящей Любви - Наша
-                    свадьба! Нам будет очень приятно, если вы разделите с нами волнующую атмосферу любви и счастья и
-                    станете свидетелями этого события. </p>
+                <p class="desc "> Ваши пожелания в конвертах будут лучшими подарками, которые помогут исполнить наши
+                    мечты, а также просим воздержаться от покупки цветов, скорее всего не сможем насладиться их красотой
+                    до отьезда. </p>
             </div>
             <hr>
             <div class="minimum">
-                <p class="desc "> Нам будет приятно, если Вы поддержите цветовую палитру нашей свальбы</p>
+                <p class="desc "> Мы будпем рады, если своими нарядами Вы поддержжите цветовую гаммму вечера </p>
             </div>
             <div class="color">
                 <div class="block_size color_one"></div>
                 <div class="block_size color_two"></div>
                 <div class="block_size color_free"></div>
             </div>
+            <p class="desc "> Просим сообщить о Вашей готовности до 01.09.2022</p>
             <div class="footer">
                 <p class="desc"> 24.09.2022 </p>
             </div>
