--- a/index.html
+++ b/index.html
@@ -1,84 +1,77 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Wedding A & I</title>
-    <script src="https://kit.fontawesome.com/f79d649bf0.js" crossorigin="anonymous"></script>
+    <title>Wedding</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="bg">
-            <h2>LOVE</h2>
-            <hr>
 
-            <div>
-                <p class="slogan">is the heart of everythings</p>
+    <div class="container">
+        <div class="left">
+            <div class="content bg1">
+                <h2 class="main">Дорогие</h2>
+                <h2 class="name">Мама <br><span>и Папа</span></h2>
+                <p class="desc">С радостью приглашаем Вас на наш Первый<br>
+                   <span> Семейный праздник – Нашу Свадьбу!</span>
+                </p>
+                <p class="date"><span>24</span> сентября<br>
+                    <span>2022</span> года.
+                </p>
+                <p class="meeteng">Кафе «Ренесанс»<br>
+                    г. Ниэний Новгород<br>
+                    ул. Ларина 15Б
+                </p>
+
             </div>
-            <p class="name">Папа и Мама</p>
-            <div class="minimum">
-                <p class="desc "> Вот уже совсем близко этот волшебный день,<br> Праздник Настоящей Любви - Наша
-                    свадьба! Нам будет очень приятно, если вы разделите с нами волнующую атмосферу любви и счастья и
-                    станете свидетелями этого события. </p>
-            </div>
-            <div>
-                <p class="desc"><span> - 24 сентября 2022 года - </span></p>
-            </div>
-            <hr>
-            <div class="container">
+        </div>
+        <div class="right">
+            <div class="content bg2">
+                <h2 class="dress_code">Дресс-код</h2>
+                <p class="happy">Мы будем рады, если своими нарядами<br>
+                    <span>вы поддержите цветовую гамму вечера!</span>
+                </p>
+                <div class="color_content">
+                    <div class="color color1"></div>
+                    <div class="color color2"></div>
+                    <div class="color color3"></div>
+                    <div class="color color4"></div>
+                    <div class="color color5"></div>
+                    <div class="color color6"></div>
+                    <div class="color color7"></div>
+                    <div class="color color8"></div>
+                    <div class="color color9"></div>
+                    <div class="color color10"></div>
+                    <div class="color color11"></div>
+                    <div class="color color12"></div>
+                </div>
+                <h2 class="present">О подарках:</h2>
+                <p class="desc_present">Ваши пожелания в конвертах осуществить наши мечты о свадебном путешествии.<br>
+                    Пожалуйста не дарите нам цветы,мы не успеем насладится их красотой в полной мере, хорошей<br>
+                    альтернативой могут стать: <br>
+                    шоколад, лотерейные билеты, вино, а лучше всего творческие поздравления.
+                </p>
                 <div class="icons">
-                    <img src="img/wedding.png" alt="">
+                    <div class="icons_left">
+                        <img src="img/img1.png" alt="">
+                        <p class="icons_desc">Церемония Бракосочетания <br> 17:00</p>
+                    </div>
+                    <div class="icons_right">
+                        <img src="img/img2.png" alt="">
+                        <p class="icons_desc">Праздничный банкет <br> 17:30</p>
+                    </div>
                 </div>
-                <div class="icons pigeon">
-                    <img src="img/pigeon.png" alt="">
+                <div class="footer">
+                    <p class="desc_footer">Просим сообщить о Вашей
+                        готовности до <span>01.09.2022</span>
                 </div>
-                <div class="icons pigeon">
-                    <img src="img/wine.png" alt="">
-                </div>
-            </div>
-            <div class="footer">
-                <p class="desc"> Кафе "Ренесанс", г. Нижний Новгород, ул. Ларина 15Б. Сбор гостей к 17:00</p>
-            </div>
-            <div class="foot">
-                <p class="desc_love"> С любовью,</p>
-            </div>
-            <div class="foot1">
-                <p class="desc_love1">Александр & Ирина</p>
-            </div>
-
-        </div>
-        <div class="bg">
-            <h3> Подсказки и пожелания</h3>
-            <hr>
-            <div class="minimum">
-                <p class="desc "> Ваши пожелания в конвертах будут лучшими подарками, которые помогут исполнить наши
-                    мечты, а также просим воздержаться от покупки цветов, скорее всего не сможем насладиться их красотой
-                    до отьезда. </p>
-            </div>
-            <hr>
-            <div class="minimum">
-                <p class="desc "> Мы будпем рады, если своими нарядами Вы поддержжите цветовую гаммму вечера </p>
-            </div>
-            <div class="color">
-                <div class="block_size color_one"></div>
-                <div class="block_size color_two"></div>
-                <div class="block_size color_free"></div>
-            </div>
-            <p class="desc "> Просим сообщить о Вашей готовности до 01.09.2022</p>
-            <div class="footer">
-                <p class="desc"> 24.09.2022 </p>
-            </div>
-            <div class="footer">
-                <p class="desc"> Нижний Новгород </p>
             </div>
         </div>
-
     </div>
-
 
 
 
